問題を改良

--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
             ▶ はじめから（スペースキー）
         </div>
         <div id="quizIntroScreen" style="display:none;">
-            <h2>突然ですがクイズです！</h2>
+            <h2>突然ですがクイズです！（全10問）</h2>
             <p>スペースキーでスタート</p>
         </div>
         <div id="quizScreen" style="display:none;"></div>
@@ -112,19 +112,54 @@
 
         const quizData = [
             {
-                q: "formrunの北極星はなんでしょう",
-                options: ["全てのフォームをformrunへ", "全ての打球をホームランへ", "全ての日程調整をbookrunへ"],
+                q: "formrunはどんなサービス？",
+                options: ["フォームをつくるサービス", "ゲームを配信するサービス", "音楽を聴くサービス"],
                 answer: 0
             },
             {
-                q: "「formrun」が目指したい状況はなんですか",
-                options: ["海外進出", "「国産フォームといえばformrun」", "株価上昇"],
+                q: "formrunでつくれるのは？",
+                options: ["おみくじ", "入力フォーム", "お天気予報"],
                 answer: 1
             },
             {
-                q: "UIUX刷新PJは何を目的としたプロジェクトですか？",
-                options: ["新機能の追加", "formrun全体のUIUX刷新", "広告戦略の変更"],
+                q: "formrunで集めた回答はどうやって見られる？",
+                options: ["見られない", "本で届く", "画面でまとめて見られる"],
+                answer: 2
+            },
+            {
+                q: "formrunで使える「カンバン」って何？",
+                options: ["お店の看板", "回答をカードのように並べる画面", "ごはんのメニュー"],
                 answer: 1
+            },
+            {
+                q: "formrunを使うと、どんなイベントに使える？",
+                options: ["お祭りの申し込み", "家の掃除", "電車の運転"],
+                answer: 0
+            },
+            {
+                q: "formrunのフォームはどこに置ける？",
+                options: ["インターネットの自分のホームページ", "冷蔵庫の中", "本の中"],
+                answer: 0
+            },
+            {
+                q: "formrunで困ったとき、どこで助けがもらえる？",
+                options: ["formrunのサポートページ", "動物園", "駅の改札"],
+                answer: 0
+            },
+            {
+                q: "formrunを使うと何が減る？",
+                options: ["入力ミスや伝え忘れ", "ごはんの量", "音の大きさ"],
+                answer: 0
+            },
+            {
+                q: "formrunをつかう人は誰？",
+                options: ["お客さんからの情報を集めたい人", "動物を飼いたい人", "空を飛びたい人"],
+                answer: 0
+            },
+            {
+                q: "formrunはどんなところで使われている？",
+                options: ["学校や会社のアンケート・申し込みなど", "動物の飼育場", "火山の調査"],
+                answer: 0
             }
         ];
 
@@ -256,4 +291,3 @@
 </body>
 
 </html>
-
