--- a/index.html
+++ b/index.html
@@ -1,10 +1,16 @@
 <!DOCTYPE html>
 <html lang="ja">
+<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
 
 <head>
     <meta charset="UTF-8" />
     <title>formrunクエスト</title>
     <style>
+        .control-button {
+            touch-action: manipulation;
+            /* タップ時のズームやスクロールを無効に */
+        }
+
         body {
             margin: 0;
             background: black;
